--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Must Watch</title>
 <style>
 * {box-sizing: border-box}
 body {
@@ -108,14 +109,29 @@ img {vertical-align: middle;}
 <body>
 
 <div class="slideshow-container">
-
     <script lang="Javascript">   
     function loadImages() {
         var imgs = {
             "img1.gif": "",
             "img2.gif": "break point",
             "img3.gif": "good idea",
-            "img4.gif": "When I saw the code I wrote 3 years ago."
+            "img4.gif": "When I saw the code I wrote 3 years ago.",
+            "img5.gif": "",
+            "img6.gif": "",
+            "img7.gif": "",
+            "img8.gif": "",
+            "img9.gif": "",
+            "img10.gif": "",
+            "img11.gif": "",
+            "img12.gif": "",
+            "img13.gif": "",
+            "img14.gif": "",
+            "img15.gif": "",
+            "img16.gif": "",
+            "img17.gif": "",
+            "img18.gif": "",
+            "img19.gif": "",
+            "img20.gif": ""
         };  
         var len = Object.keys(imgs).length;
         var ct = 1;
@@ -183,7 +199,7 @@ function showSlides() {
     slideIndex++;
     if (slideIndex > slides.length) {slideIndex = 1} 
     slides[slideIndex-1].style.display = "block"; 
-    setTimeout(showSlides, 1000); // Change image every 2 seconds
+    setTimeout(showSlides, 10000); // Change image every 10 seconds
 }
 </script>
 
